force-app/main/default/objects/Contact/fields/Active_sustainer_account__c.field-meta.xml
<CustomField>
    <fullName>Active_sustainer_account__c</fullName>
    <description>Checked if this contact has an active recurring donation to MinnPost on one or more of Razoo, Acceptiva, or Givalike. Inherited from the Account object.</description>
    <formula>Account.Active_sustainer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checked if this contact has an active recurring donation to MinnPost on one or more of Razoo, Acceptiva, or Givalike. Inherited from the Account object.</inlineHelpText>
    <label>Active sustainer account?</label>
    <type>Checkbox</type>
</CustomField>