force-app/main/default/objects/Contact/fields/Current_member__c.field-meta.xml
<CustomField>
    <fullName>Current_member__c</fullName>
    <formula>Account.Current_member__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current member?</label>
    <type>Checkbox</type>
</CustomField>