force-app/main/default/objects/Contact/fields/Drupal_ID__c.field-meta.xml
<CustomField>
    <fullName>Drupal_ID__c</fullName>
    <label>Drupal ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>