force-app/main/default/objects/Contact/fields/Drupal_Username__c.field-meta.xml
<CustomField>
    <fullName>Drupal_Username__c</fullName>
    <description>Username from MinnPost.com Drupal system.</description>
    <inlineHelpText>Username from MinnPost.com Drupal system.</inlineHelpText>
    <label>Drupal Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>