force-app/main/default/objects/Contact/fields/Is_partner_offer_eligible__c.field-meta.xml
<CustomField>
    <fullName>Is_partner_offer_eligible__c</fullName>
    <description>If Gold(3)+ member and date of eligibility for next partner offer is in the past, then the member is eligible.</description>
    <formula>IF(AND(Membership_level_number__c  &gt;= 3, (Date_Next_Eligible_for_Partner_Offer__c  &lt;= TODAY()+1 || ISBLANK(Date_Next_Eligible_for_Partner_Offer__c))),true,null)</formula>
    <label>Is partner offer eligible?</label>
    <type>Checkbox</type>
</CustomField>