force-app/main/default/objects/Contact/fields/Lapsed_member__c.field-meta.xml
<CustomField>
    <fullName>Lapsed_member__c</fullName>
    <formula>Account.Lapsed_member__c</formula>
    <label>Lapsed member?</label>
    <type>Checkbox</type>
</CustomField>