force-app/main/default/objects/Contact/fields/MailchimpBatchID__c.field-meta.xml
<CustomField>
    <fullName>MailchimpBatchID__c</fullName>
    <description>The ID of a pending Mailchimp batch operation that affects this contact. Used internally by the sync process.</description>
    <externalId>true</externalId>
    <label>Mailchimp Batch Operation</label>
    <length>10</length>
    <type>Text</type>
</CustomField>