force-app/main/default/objects/Contact/fields/MailchimpEmailHash__c.field-meta.xml
<CustomField>
    <fullName>MailchimpEmailHash__c</fullName>
    <description>The MD5 hash of the lowercase version of the contact&#39;s e-mail address, used as an identifier by the Mailchimp API.</description>
    <externalId>true</externalId>
    <label>Mailchimp Email Hash</label>
    <length>32</length>
    <type>Text</type>
</CustomField>