force-app/main/default/objects/Contact/fields/MailchimpLastChanged__c.field-meta.xml
<CustomField>
    <fullName>MailchimpLastChanged__c</fullName>
    <description>Date and time the corresponding list member was updated in Mailchimp.</description>
    <label>Last changed in Mailchimp</label>
    <type>DateTime</type>
</CustomField>