force-app/main/default/objects/Contact/fields/MailchimpLastSyncedAt__c.field-meta.xml
<CustomField>
    <fullName>MailchimpLastSyncedAt__c</fullName>
    <description>Date/time this contact was last synced with Mailchimp.</description>
    <label>Last synced to Mailchimp</label>
    <type>DateTime</type>
</CustomField>