force-app/main/default/objects/Contact/fields/MailchimpMemberRating__c.field-meta.xml
<CustomField>
    <fullName>MailchimpMemberRating__c</fullName>
    <description>Member rating synced automatically from Mailchimp.</description>
    <label>Mailchimp Member Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>