force-app/main/default/objects/Contact/fields/MailchimpNeedsSync__c.field-meta.xml
<CustomField>
    <fullName>MailchimpNeedsSync__c</fullName>
    <description>Whether the record has been updated since it was last synced to Mailchimp.</description>
    <formula>ISBLANK(MailchimpLastSyncedAt__c) || LastModifiedDate - MailchimpLastSyncedAt__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Needs sync to Mailchimp?</label>
    <type>Checkbox</type>
</CustomField>