force-app/main/default/objects/Contact/fields/Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>Membership_Level__c</fullName>
    <description>Gets the membership level from the Account object</description>
    <formula>Account.Membership_level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership Level</label>
    <type>Text</type>
</CustomField>