force-app/main/default/objects/Contact/fields/Membership_level_number__c.field-meta.xml
<CustomField>
    <fullName>Membership_level_number__c</fullName>
    <formula>Account.Membership_level_number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Membership level number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>