force-app/main/default/objects/Contact/fields/MinnPost_com_user_account__c.field-meta.xml
<CustomField>
    <fullName>MinnPost_com_user_account__c</fullName>
    <description>Checked if this Contact is associated with a MinnPost.com Drupal user ID.</description>
    <formula>IF(Drupal_ID__c=&quot;&quot;,FALSE,TRUE)</formula>
    <inlineHelpText>Checked if this Contact is associated with a MinnPost.com Drupal user ID.</inlineHelpText>
    <label>MinnPost.com user account?</label>
    <type>Checkbox</type>
</CustomField>