force-app/main/default/objects/Contact/fields/Never_member__c.field-meta.xml
<CustomField>
    <fullName>Never_member__c</fullName>
    <formula>Account.Never_member__c</formula>
    <label>Never member?</label>
    <type>Checkbox</type>
</CustomField>